--- a/style.css
+++ b/style.css
@@ -128,3 +128,88 @@
     border: 2px solid var(--color4);
     border-radius: 8px;
 }
+.modal{
+position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: 200ms ease-in-out;
+  border: 2px solid var(--color4);
+  border-radius: var(--borderradius1);
+  z-index: 10;
+  background-color: var(--color1);
+  width: 70rem;
+  height: 50rem;
+  max-width: 80%;
+}
+.modal.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+.modalHeader{
+  padding: 5px;
+  text-align: center;
+  background-color: var(--color2);
+  border-top-left-radius: var(--borderradius1);
+  border-top-right-radius: var(--borderradius1);
+  border-bottom: 2px solid var(--color4);
+}
+.modalTitle{
+    font-size: var(--fontsize2);
+    font-weight: var(--fontweight1); 
+}
+.modalBody{
+   padding: 10px 15px;
+   align-items: center;
+   min-height: 70% ;
+   display: flex;
+   flex-direction: column;
+}
+.modalPic{
+   max-height: 10%;
+   max-width: 10%;
+}
+.modalInstructions{
+   font-size: var(--fontsize1);
+   font-weight: var(--fontweight1);
+}
+.modalBottom{
+    padding-left: 40%;
+    padding-right: 40%;
+    padding-top: 2.2%;
+    min-height: 10%;
+    display: flex;
+    align-items: center;
+    border-top: 2px solid var(--color4);
+    border-bottom-left-radius: var(--borderradius1);
+    border-bottom-right-radius: var(--borderradius1);
+    background-color: var(--color2);
+}
+.closeButton{
+    min-width: 100%;
+    font-size: var(--fontsize1);
+    font-weight: var(--fontweight1);
+    background-color: var(--color3);
+    border: 2px solid var(--color4);
+    cursor: pointer;
+
+}
+.overlay{
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, var(--opacity));
+    pointer-events: none;
+  }
+.overlay.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+
+#table_id, td{
+    border: 2px solid black;
+    position: static;
+}
